Plotting, saving images function

--- a/SR_GAN.ipynb
+++ b/SR_GAN.ipynb
@@ -66,7 +66,7 @@
     "        print(\"Image is None.\")\n",
     "        return None\n",
     "    \n",
-    "\n",
+    "    \n",
     "    image = tf.image.decode_image(tf.io.read_file(image_path))\n",
     "    # removing alpha channel if exists as ESRGAN does not take 4 channels\n",
     "    if image.shape[-1] == 4:\n",
@@ -79,7 +79,34 @@
     "    image = tf.cast(image, tf.float32)\n",
     "\n",
     "    # Add an extra dimension to represent the batch size\n",
-    "    return tf.expand_dims(image, 0)"
+    "    return tf.expand_dims(image, 0)\n",
+    "  \n",
+    "def save_image(image, filename):\n",
+    "    \n",
+    "    if not isinstance(image, Image.Image):\n",
+    "        # Clip pixel values to the range [0, 255] and convert to a PIL Image\n",
+    "        image = tf.clip_by_value(image, 0, 255)\n",
+    "        image = Image.fromarray(tf.cast(image, tf.uint8).numpy())\n",
+    "    # Save the image as a JPEG file\n",
+    "    image.save(\"%s.jpg\" % filename)\n",
+    "    print(\"Saved as %s.jpg\" % filename)\n",
+    "\n",
+    "def plot_image(image, title=\"\"):\n",
+    "\n",
+    "    # Convert the image tensor to a NumPy array\n",
+    "    image = np.asarray(image)\n",
+    "\n",
+    "    # If the tensor has dimensions of size 1, squeeze the tensor\n",
+    "    if image.ndim == 4 and image.shape[-1] == 1:\n",
+    "        image = np.squeeze(image, axis=-1)\n",
+    "    \n",
+    "    # Clip pixel values to the range [0, 255] and convert to a PIL Image\n",
+    "    image = tf.clip_by_value(image, 0, 255)\n",
+    "    image = Image.fromarray(tf.cast(image, tf.uint8).numpy())\n",
+    "    \n",
+    "    plt.imshow(image)\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.title(title)"
    ]
   }
  ],
