Bicubic Downsampling function

--- a/SR_GAN.ipynb
+++ b/SR_GAN.ipynb
@@ -222,10 +222,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMAGE_PATH = \"test.jpg\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bicubic Downsampling Function"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def downscale_image(image):\n",
+    "  \n",
+    "\n",
+    "    #checking image size to make sure the image is not including alpha and setting image size\n",
+    "    image_size = []\n",
+    "    if len(image.shape) == 3:\n",
+    "        image_size = [image.shape[1], image.shape[0]]\n",
+    "    else:\n",
+    "        raise ValueError(\"Dimension mismatch. Can work only on single image.\")\n",
+    "\n",
+    "    image = tf.squeeze(\n",
+    "        tf.cast(\n",
+    "            tf.clip_by_value(image, 0, 255), tf.uint8))\n",
+    "    #resizing with bicubic interpolation\n",
+    "    lr_image = np.asarray(\n",
+    "        Image.fromarray(image.numpy())\n",
+    "        .resize([image_size[0] // 4, image_size[1] // 4],\n",
+    "                Image.BICUBIC))\n",
+    "    #expanding dimensions and cast to float32\n",
+    "    lr_image = tf.expand_dims(lr_image, 0)\n",
+    "    lr_image = tf.cast(lr_image, tf.float32)\n",
+    "    return lr_image"
+   ]
   }
  ],
  "metadata": {
