--- a/SR_GAN.ipynb
+++ b/SR_GAN.ipynb
@@ -446,6 +446,43 @@
     "fig.tight_layout()\n",
     "plot_image(tf.squeeze(fake_image), \"Super Resolution\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measuring SSIM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(0.5028519, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def SSIM(image1, image2):\n",
+    "    # Convert images to float32\n",
+    "    image1 = tf.image.convert_image_dtype(image1, tf.float32)\n",
+    "    image2 = tf.image.convert_image_dtype(image2, tf.float32)\n",
+    "    #ensuring images have the same shape\n",
+    "    if image1.shape != image2.shape:\n",
+    "        raise ValueError(\"Input images must have the same shape.\")\n",
+    "\n",
+    "    ssim_val = tf.image.ssim(image1, image2, max_val=1.0)\n",
+    "\n",
+    "    return ssim_val\n",
+    "ssim = SSIM(tf.squeeze(hr_image), tf.squeeze(fake_image))\n",
+    "print(ssim)"
+   ]
   }
  ],
  "metadata": {
